[gd_scene load_steps=10 format=2]

[ext_resource path="res://Playback/subtitle-label.gd" type="Script" id=1]
[ext_resource path="res://Recordings/json-file-parser.gd" type="Script" id=2]
[ext_resource path="res://Shared/Fonts/jelle-bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Playback/subtitle-animation-player.gd" type="Script" id=4]
[ext_resource path="res://Playback/white-noise.ogg" type="AudioStream" id=5]
[ext_resource path="res://Shared/Fonts/jelle-bold-26.tres" type="DynamicFont" id=6]
[ext_resource path="res://Playback/playback.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[node name="Playback" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtitlesContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/SubtitlesContainer"]
script = ExtResource( 4 )

[node name="Line1" type="RichTextLabel" parent="MarginContainer/SubtitlesContainer"]
margin_right = 1240.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="RichTextLabel" parent="MarginContainer/SubtitlesContainer"]
margin_top = 37.0
margin_right = 1240.0
margin_bottom = 65.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.705882, 0.705882, 0.705882, 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="RichTextLabel" parent="MarginContainer/SubtitlesContainer"]
margin_top = 69.0
margin_right = 1240.0
margin_bottom = 92.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.439216, 0.439216, 0.439216, 1 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="WhiteNoisePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 2.0

[node name="JsonFileParser" type="Node" parent="."]
script = ExtResource( 2 )
